tests/snapshots/test_uigen_widget__action_seaparator_with_callback-2.snap
---
source: tests/test_uigen_widget.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QWidget *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupActionSeparator();
        this->setupActionHovered();
        this->updateActionSeparator();
    }

private:
    enum class BindingIndex : unsigned {
        ActionSeparator,
    };

    void setupActionSeparator()
    {
    }

    void updateActionSeparator()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::ActionSeparator);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->ui_->action->setSeparator(this->evalActionSeparator());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    bool evalActionSeparator()
    {
    b0:
        return true;
    }

    void setupActionHovered()
    {
        QObject::connect(this->ui_->action, QOverload<>::of(&QAction::hovered), this->root_, [this]() { this->onActionHovered(); });
    }

    void onActionHovered()
    {
    b0:
        return;
    }

    struct PropertyObserver
    {
        QMetaObject::Connection connection;
        QObject *object = nullptr;
    };

    QWidget *const root_;
    Ui::MyType *const ui_;
#ifndef QT_NO_DEBUG
    quint32 bindingGuard_[1] = {0};
#endif

};
} // namespace UiSupport

