tests/snapshots/test_uigen_widget__object_property_binding_to_root-2.snap
---
source: tests/test_uigen_widget.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QDialog *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupDialogWindowTitle();
        this->updateDialogWindowTitle();
    }

private:
    enum class BindingIndex : unsigned {
        DialogWindowTitle,
    };

    void setupDialogWindowTitle()
    {
        QObject::connect(this->ui_->edit, QOverload<const QString &>::of(&QLineEdit::textChanged), this->root_, [this]() { this->updateDialogWindowTitle(); });
    }

    void updateDialogWindowTitle()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::DialogWindowTitle);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->root_->setWindowTitle(this->evalDialogWindowTitle());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    QString evalDialogWindowTitle()
    {
        QString a0;
    b0:
        a0 = this->ui_->edit->text();
        return a0;
    }

    struct PropertyObserver
    {
        QMetaObject::Connection connection;
        QObject *object = nullptr;
    };

    QDialog *const root_;
    Ui::MyType *const ui_;
#ifndef QT_NO_DEBUG
    quint32 bindingGuard_[1] = {0};
#endif

};
} // namespace UiSupport

