tests/snapshots/test_uigen_widget__object_property_binding_to_root.snap
---
source: tests/test_uigen_widget.rs
expression: ui_xml
---
<ui version="4.0">
 <class>MyType</class>
 <widget class="QDialog" name="dialog">
  <widget class="QLineEdit" name="edit">
  </widget>
 </widget>
</ui>

